# cpp-python-tool-template

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  conda_release.yml  cpp_standalone.yml  docker_release.yml  documentation.yml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml
cli/: entrypoint.py  setup.py
conda-recipe/: build-env.yaml  conda_build_config.yaml  meta.yaml
cpp/: CMakeLists.txt
cpp/cmake/: htslib.cmake
cpp/standalone/: CMakeLists.txt
src/: main.cpp
tests/cpp/: test_main.cpp
tests/python/: test_cli.py
