[metadata]
name = aligncount_demo
version = 0.1.0
description = Aligncount wrapper

[options]
# Automatically find any packages under this directory (i.e. cli/)
packages = find:

# If you had data files, you could add:
# include_package_data = True

[options.packages.find]
# Only look for packages under the current directory
where = .